Fix layout bugs on reset password

--- a/views/styles/reset-password.css
+++ b/views/styles/reset-password.css
@@ -20,7 +20,7 @@
 }
 
 #reset-block>form {
-  height: 25.8rem;
+  height: 20rem;
   display: flex;
   flex-direction: column;
   /* size in rem so form scales with font size. */
@@ -156,7 +156,7 @@
   .container {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 20% 60% 20%;
+    grid-template-rows: 10% 80% 10%;
   }
 
   #reset-block {
